--- a/css/style.less
+++ b/css/style.less
@@ -53,7 +53,6 @@
 @highlight: #3CD5FF;
 html {
   height:100%;
-  overflow:hidden;
 }
 body {
 	font-family: codeLight;
@@ -298,15 +297,16 @@ body {
   overflow: hidden;
 }
 #image-viewer > .modal-dialog {
-  width: 90%;
+  width: 80%;
   height: 90%;
   padding:0;
   margin-top:15px;
+  background-color: black;
 }
 #image-viewer > .modal-dialog > .modal-content {
-  background-color: black;
+  background-color: transparent;
   width:100%;
-  height:100%;
+  height:90%;
 }
 #image-viewer > .modal-dialog > .modal-content .modal-body {
   padding:0px;
@@ -511,6 +511,9 @@ body {
   margin:auto;
   line-height:1em;
 }
+.crew-pic-hidden {
+  margin-left: -60px;
+}
 .panel {
   background-color: transparent;
   border: 0;
@@ -621,7 +624,15 @@ body {
     width: 100%;
   }
   #title {
-    font-size: 60px;
+    font-size: 50px;
+    letter-spacing:15px
+  }
+  #subtitle {
+    font-size: 25px;
+    letter-spacing: 15px;
+  }
+  #comingsoon {
+    font-size: 30px;
   }
   #sidebar > .person_tag {
     padding-top:5px!important;
@@ -630,8 +641,10 @@ body {
     height: auto;
   }
   .actor {
-    bottom: 200px!important;
+    bottom: 300px!important;
     font-size: 12px!important;
+    top:0px;
+    overflow: auto;
   }
 
   #crew-title {
@@ -658,8 +671,21 @@ body {
     height: auto!important;
     width: 100%;
   }
+  .panel-title {
+    font-size: 18px;
+    top: 3px;
+  }
+  .panel-heading {
+    padding: 5px;
+  }
+  .crew-pic-hidden {
+    margin-left: -40px;
+  }
   #crew {
     margin: 0;
+  }
+  .panel-heading > div > img {
+    height: 30px;
   }
   .panel-collapse > .panel-body > .row > .col-sm-9 {
     font-size: 12px;
@@ -672,7 +698,7 @@ body {
   #crew > .col-sm-8 {
     padding-bottom: 150px;
   }
-  #videos #sidebar {
+  /*#videos #sidebar {
     display: none;
   }
   #viewer {
@@ -681,12 +707,15 @@ body {
   }
   #viewer iframe {
     display: block!important;
-    margin-bottom: 30px;
+    margin-bottom: 100px;
   }
   #viewer:last-child {
     margin-bottom:150px;
   }
   #viewer-floater {
+    display: none;
+  }*/
+  #viewer, #viewer-floater {
     display: none;
   }
 }
